// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ any props 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0 className"
  id="id"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ buttons 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: column;
}

.c5 {
  margin-top: 16px;
}

.c8 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  user-select: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  text-decoration: none;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #2B2D33;
  border: solid 2px #D5D5D6;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c8:active {
  top: 1px;
}

.c8:hover {
  color: #2B2D33;
  border: solid 2px #2B2D33;
}

.c10 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  user-select: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  text-decoration: none;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #2B2D33;
  padding: 0;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c10:active {
  top: 1px;
}

.c10:hover {
  color: #000000;
}

.c9 {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9:not(:last-of-type) {
  margin-right: 8px;
}

.c9>svg {
  display: block;
}

.c6 {
  display: inline-flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: flex-start;
  align-items: center;
  margin-bottom: -16px;
  flex-wrap: wrap;
  vertical-align: middle;
  width: 100%;
}

.c7 {
  position: relative;
  margin-bottom: 16px;
  height: 100%;
  display: flex;
  align-content: center;
  align-items: center;
  margin-right: 16px;
  width: auto;
  flex: none;
}

.c7:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <button
            class="c8"
            type="button"
          >
            <span
              class="c9"
            >
              Complete
            </span>
          </button>
        </div>
        <div
          class="c7"
        >
          <button
            class="c10"
            type="button"
          >
            <span
              class="c9"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert w/ compact & buttons 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: column;
}

.c5 {
  margin-top: 16px;
}

.c8 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  user-select: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  text-decoration: none;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #2B2D33;
  border: solid 2px #D5D5D6;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c8:active {
  top: 1px;
}

.c8:hover {
  color: #2B2D33;
  border: solid 2px #2B2D33;
}

.c10 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  white-space: nowrap;
  user-select: none;
  appearance: none;
  cursor: pointer;
  outline: 0;
  position: relative;
  border-radius: 8px;
  border-color: transparent;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-weight: 500;
  text-decoration: none;
  transition: background-color 0.3s ease,color 0.3s ease,border-color 0.3s ease;
  font-size: 14px;
  line-height: 22px;
  padding: 0 20px;
  height: 36px;
  min-width: 36px;
  color: #2B2D33;
  padding: 0;
  height: 32px;
  border-radius: 4px;
  background: transparent;
}

.c10:active {
  top: 1px;
}

.c10:hover {
  color: #000000;
}

.c9 {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c9:not(:last-of-type) {
  margin-right: 8px;
}

.c9>svg {
  display: block;
}

.c6 {
  display: inline-flex;
  flex-direction: row;
  justify-content: flex-start;
  align-content: flex-start;
  align-items: center;
  margin-bottom: -16px;
  flex-wrap: wrap;
  vertical-align: middle;
  width: 100%;
}

.c7 {
  position: relative;
  margin-bottom: 16px;
  height: 100%;
  display: flex;
  align-content: center;
  align-items: center;
  margin-right: 16px;
  width: auto;
  flex: none;
}

.c7:last-child {
  margin-right: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
    <div
      class="c5"
    >
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          <button
            class="c8"
            type="button"
          >
            <span
              class="c9"
            >
              Complete
            </span>
          </button>
        </div>
        <div
          class="c7"
        >
          <button
            class="c10"
            type="button"
          >
            <span
              class="c9"
            >
              Cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert w/ compact 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: column;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ compactBelow 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c5 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: row;
}

@media (max-width:10000px) {
  .c0 .c2 {
    flex-direction: column;
  }

  .c0 .c2 .c4 {
    margin-bottom: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4 c5"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 2`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c5 .c2 {
  flex-direction: row;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #E8F7F4;
  color: #008E7D;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.833 14.28l-2.88-2.88-1.41 1.42 5 4.99c.42.41.99.42 1.41 0l11.62-11.62-1.41-1.41-11.86 11.85-.09-.09c.43-.8.27-1.61-.38-2.26z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 3`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c5 .c2 {
  flex-direction: row;
}

.c6 .c2 {
  flex-direction: row;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #FEF3EC;
  color: #CB662F;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.82 20H5.88c-1.31 0-2.04.4-2.82 1.35h-.13l8.01-14.38c.62-1.12.67-2.02.24-3.17l.06-.11 7.98 14.39c.63 1.14 1.33 1.58 2.55 1.8l.05.12zM11 15h2v-5h-2v5zm1 3.75a1.25 1.25 0 10-.001-2.5 1.25 1.25 0 000 2.5zM2 22h20c.86 0 1.25-.84.8-1.65L12.87 2.51a.997.997 0 00-1.74 0L1.16 20.43C.75 21.16 1.14 22 2 22z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 4`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c5 .c2 {
  flex-direction: row;
}

.c6 .c2 {
  flex-direction: row;
}

.c7 .c2 {
  flex-direction: row;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #FDEEEE;
  color: #C74952;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 13V7h2v6h-2zM12 17a1.25 1.25 0 110-2.5 1.25 1.25 0 010 2.5z"
      />
      <path
        clip-rule="evenodd"
        d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16z"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ design 5`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c5 .c2 {
  flex-direction: row;
}

.c6 .c2 {
  flex-direction: row;
}

.c7 .c2 {
  flex-direction: row;
}

.c8 .c2 {
  flex-direction: row;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #E6F6F8;
  color: #00809C;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ dynamic 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
  width: auto;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/ responsive compact 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c4 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: column;
}

@media only screen and (min-width: 1024px) {
  .c0 .c2 {
    flex-direction: row;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div
      class="c4"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/o icon 1`] = `
.c3 {
  font-weight: 500;
  margin-right: 8px;
  white-space: nowrap;
}

.c2 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c1 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1 c2"
  >
    <div
      class="c3"
    >
      Alert title
    </div>
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;

exports[`Alert w/o title 1`] = `
.c1 {
  width: 24px;
  height: 24px;
  margin-right: 12px;
}

.c3 {
  display: flex;
  width: inherit;
}

.c0 {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  position: relative;
  font-family: 'ALS Hauss',Helvetica,'Helvetica New',Arial,sans-serif;
  font-stretch: normal;
  font-style: normal;
  letter-spacing: normal;
  margin: 0;
  font-size: 14px;
  line-height: 22px;
  border-radius: 8px;
  padding: 16px;
  padding-right: 24px;
  box-sizing: border-box;
  width: 100%;
  background-color: #F4F4F4;
  color: #2B2D33;
}

.c0 .c2 {
  flex-direction: row;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.41 12.01H9v-2h3c.6 0 1 .4 1 1v5h2v2H9v-2h2v-2.13c0-1.06.53-1.62 1.41-1.75v-.12zM12 20c4.42 0 8-3.58 8-8s-3.58-8-8-8-8 3.58-8 8 3.58 8 8 8zm0 2C6.48 22 2 17.52 2 12S6.48 2 12 2s10 4.48 10 10-4.48 10-10 10zm1.5-14.49c0 .83-.67 1.5-1.5 1.5s-1.5-.67-1.5-1.5.67-1.5 1.5-1.5 1.5.67 1.5 1.5z"
      />
    </svg>
  </div>
  <div
    class="c2 c3"
  >
    <div>
      This is a test alert message.
    </div>
  </div>
</div>
`;
